Correct CSS and remove div.wrap

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,10 +5,6 @@
 .container {
   max-width: 1050px;
   margin: 0 auto;
-}
-
-.wrap {
-  margin: 0 20px;
   border-top: 1px solid transparent;
 }
 
@@ -58,6 +54,10 @@
   margin-right: -4px;
 }
 
+.main-nav li:last-child {
+  margin-right: 0;
+}
+
 .main-nav a {
   display: block;
   padding: 15px 25px;
@@ -89,8 +89,14 @@
   background-color: lightblue;
 }
 
+@media screen and (max-width: 1100px) {
+  .container {
+    padding: 0 25px;
+  }
+}
+
 @media screen and (max-width: 760px) {
-  
+    
   .logo {
     float: none;
     text-align: center;
@@ -117,7 +123,21 @@
   .main-nav li {
     display: block;
     float: none;
+    width: 100%;
     margin-right: 0;
+    padding: 0;
+  }
+  
+  .main-nav li:hover {
+    margin: 0 auto;
+    width: 90%;
+    padding: 5px;
+    transition: width 0.5s ease, padding 0.8s ease;
+  }
+  
+  .main-nav li:hover a {
+    padding: 25px;
+    transition: padding 0.8s ease;
   }
   
   .main-nav {
